# usercustomize-entrypoints

./: .gitignore  poetry.toml  pyproject.toml  readme.md
docs/: conf.py  index.rst
src/usercustomize/: __init__.py
src/usercustomize/_vendor/importlib_metadata/: __init__.py
tests/: test_usercustomize.py
